--- a/angular.json
+++ b/angular.json
@@ -26,7 +26,11 @@
             "styles": [
               "src/styles.css",
               "././node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "././node_modules/ngx-toastr/toastr.css"
+              "././node_modules/ngx-toastr/toastr.css",
+              "././node_modules/font-awesome/css/font-awesome.min.css",
+              "././node_modules/primeng/resources/themes/luna-amber/theme.css",
+              "././node_modules/primeng/resources/primeng.min.css"
+
             ],
             "scripts": []
           },
